<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.warnotte</groupId>
	<artifactId>electribulator</artifactId>
	<version>0.3.0</version>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<project.mainclass1>org.warnotte.elecribulator.GUI.MainFrame</project.mainclass1>

		<releasedir>release</releasedir>

	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>build-first</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<!--<finalName>${project.artifactId}</finalName> -->
							<archive>
								<manifest>
									<mainClass>${project.mainclass1}</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<target>

								<copy todir="${releasedir}/config">
									<fileset dir="config">
										<include name="**/*" />
									</fileset>
								</copy>

								<copy todir="${releasedir}/docs">
									<fileset dir="docs">
										<include name="**/*" />
									</fileset>
								</copy>

								<copy todir="${releasedir}/saves">
									<fileset dir="saves">
										<include name="**/*" />
									</fileset>
								</copy>

								<copy todir="${releasedir}/">
									<fileset dir="rootFolder">
										<include name="**/*" />
									</fileset>
								</copy>

								<copy
									file="${basedir}/target/electribulator-${project.version}-jar-with-dependencies.jar"
									tofile="${releasedir}/electribulator.jar" />

							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			
			<!-- Pour faire un executable -->
			<!-- 
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7.16</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>console</headerType>
							<outfile>target/${project.artifactId}-${project.version}.exe</outfile>
							<jar>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</jar>
							<errTitle>encc</errTitle>
							<classPath>
								<mainClass>${project.mainclass1}</mainClass>
								<addDependencies>true</addDependencies>
								<preCp>anything</preCp>
							</classPath>
							<jre>
								<minVersion>1.${maven.compiler.target}.0</minVersion>
								<opts>
									<opt>-Djava.endorsed.dirs=./endorsed</opt>
								</opts>
							</jre>
							<versionInfo>
								<fileVersion>1.0.0.0</fileVersion>
								<txtFileVersion>1.0.0.0</txtFileVersion>
								<fileDescription>${project.name}</fileDescription>
								<copyright>Warnotte Renaud</copyright>
								<productVersion>1.0.0.0</productVersion>
								<txtProductVersion>1.0.0.0</txtProductVersion>
								<productName>${project.name}</productName>
								<originalFilename>${project.artifactId}-${project.version}.exe</originalFilename>
								<internalName>${project.name}</internalName>
							</versionInfo>
							 
						</configuration>
					</execution>


					
				</executions>
			</plugin>
 			-->

		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.warnotte</groupId>
			<artifactId>waxaudiomiditools</artifactId>
			<version>0.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.10</version>
		</dependency>
		<dependency>
			<groupId>org.warnotte</groupId>
			<artifactId>waxlibswingcomponentsMVN</artifactId>
			<version>0.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.warnotte</groupId>
			<artifactId>waxLib2</artifactId>
			<version>0.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.warnotte</groupId>
			<artifactId>OBJ2GUI</artifactId>
			<version>0.1.0</version>
		</dependency>
	</dependencies>
</project>